tests/error/modifier_errors/dagger_branch1.py
from guppylang.decorator import guppy
from guppylang.std.builtins import dagger


@guppy
def test() -> None:
    with dagger:
        if 2 > 46:
            pass


test.compile()
